# koloshmet_lib

./: .gitignore  CMakeLists.txt  LICENSE  test.cpp
async/: CMakeLists.txt
async/stop_token/: stop_token.h
lib/: CMakeLists.txt
lib/async/: CMakeLists.txt
lib/async/stop_token/: stop_token.cpp
lib/net/: CMakeLists.txt
lib/net/http/: message.cpp  message.h
lib/posix/: CMakeLists.txt
lib/posix/file_descriptor/: fd_stream.h  shared_fd.h  syscalls.cpp  syscalls.h  unique_fd.h
lib/posix/net/: client.h  server.cpp  server.h  socket.cpp  socket.h  socket_pool.cpp  socket_pool.h
lib/posix/subprocess/: environment_variable.cpp  environment_variable.h  subprocess.cpp  subprocess.h
lib/util/: CMakeLists.txt
lib/util/container/: slice.h  sorted_array.cpp  sorted_array.h  utils.h
lib/util/exception/: exception.cpp  exception.h
lib/util/io/: binary_io.cpp
lib/util/memory/: move_on_rvalue_ptr.h  reserve_t.h
lib/util/opt/: command.cpp  command.h  opt.h  options.cpp  options.h
lib/util/string/: utils.h
lib/util/tree_value/: json_io.cpp  json_io.h  tree_value.cpp  tree_value.h
lib/util/type/: list_utils.cpp  list_utils.h  type_list.h  utils.h
net/: CMakeLists.txt
net/coding/: url.cpp  url.h
net/http/: message.cpp  message.h
posix/: CMakeLists.txt
posix/environ/: environment_variable.cpp  environment_variable.h
posix/file_descriptor/: fd.cpp  fd.h  fd_stream.cpp  fd_stream.h  shared_fd.cpp  shared_fd.h  syscalls.cpp  syscalls.h  unique_fd.h
posix/net/: client.cpp  client.h  replier.cpp  replier.h  server.cpp  server.h  socket.cpp  socket.h  socket_pool.cpp  socket_pool.h
posix/subprocess/: environment_variable.cpp  subprocess.cpp  subprocess.h
util/: CMakeLists.txt  exception.cpp  exception.h
util/container/: slice.h  utils.h
util/containers/: slice.h
util/exception/: exception.h
util/global/: constants.h
util/io/: binary_io.h  json_io.h
util/memory/: copy_on_move_ref.cpp  copy_on_move_ref.h  move_on_rvalue_ptr.cpp  move_on_rvalue_ptr.h  reserve_t.cpp  reserve_t.h
util/opt/: command.cpp  command.h  opt.h  options.cpp  options.h
util/string/: utils.cpp  utils.h
util/tree_value/: json_io.cpp  json_io.h  tree_value.cpp  tree_value.h
util/type/: list_utils.h  type_list.h
